<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="ivProfileImage_content_description">Profile Picture</string>
    <string name="tvScreenName_text">ediaz188</string>
    <string name="tvBody_text">Sample Tweet</string>
    <string name="tvTimestamp_text">1h</string>
    <string name="tvDot">\u2022</string>
    <string name="tvName_text">Profile Name</string>
    <string name="etCompose_text">What\'s happening\?"</string>
    <string name="btnTweet_text">Tweet</string>
    <string name="tvCount_text">140</string>
</resources>