<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/ivProfileImage_content_description"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:text="@string/tvName_text"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/tvName"
            android:text="@string/tvScreenName_text" />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/tvScreenName"
            android:text="@string/tvDot" />

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/tvDot"
            android:text="@string/tvTimestamp_text" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvScreenName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:text="@string/tvBody_text"
            android:textColor="#000000" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>